--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -96,7 +96,7 @@ r.TranslucentSortPolicy=0
 TranslucentSortAxis=(X=0.000000,Y=-1.000000,Z=0.000000)
 vr.VRS.HMDFixedFoveationLevel=0
 vr.VRS.HMDFixedFoveationDynamic=False
-r.CustomDepth=1
+r.CustomDepth=3
 r.CustomDepthTemporalAAJitter=True
 r.PostProcessing.PropagateAlpha=0
 r.DefaultFeature.Bloom=True
@@ -187,6 +187,7 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/CodenameSpark")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/CodenameSpark")
+NearClipPlane=0.100000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
