--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
-EditorStartupMap=/Game/Level/FP_TestLevel.FP_TestLevel
+GameDefaultMap=/Game/Level/ShipLevelV2.ShipLevelV2
+EditorStartupMap=/Game/Level/ShipLevelV2.ShipLevelV2
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
