--- a/CodenameSpark.uproject
+++ b/CodenameSpark.uproject
@@ -42,5 +42,8 @@
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/42fe1c4fc1c149c39ddeee891d75b50c"
 		}
+	],
+	"TargetPlatforms": [
+		"Windows"
 	]
 }
